implement PayPal payment

--- a/ecommerceClient/public/index.html
+++ b/ecommerceClient/public/index.html
@@ -12,6 +12,8 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+  <script src="https://www.paypal.com/sdk/js?client-id=AU2iDkTNlGykm7h4cAHeDdKkvlp287rCK6npYpHmWJdA-Fx7ehROeQoHweGLf33B3IluuZ1FTDdiaRV_&currency=USD"></script>
+
   <title>DevBook</title>
 </head>
 
